src/antlr/jinja/JinjaFlaskParser.java
// Generated from /home/ghifar/Downloads/Telegram Desktop/compiler/psychic-broccoli-main/grammars/JinjaFlaskParser.g4 by ANTLR 4.13.2
package antlr.jinja;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JinjaFlaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, STRING=3, NUMBER=4, PASS=5, DEF=6, RETURN=7, FROM=8, 
		IMPORT=9, AS=10, IF=11, ELIF=12, ELSE=13, FOR=14, IN=15, GLOBAL=16, CLASS=17, 
		AND=18, OR=19, NOT=20, TRUE=21, FALSE=22, NONE=23, IS=24, WHILE=25, ARROW=26, 
		AT=27, EQ=28, NEQ=29, GTE=30, LTE=31, SLASHSLASH=32, POW=33, ASSIGN=34, 
		GT=35, LT=36, SLASH=37, STAR=38, COLON=39, SEMI=40, COMMA=41, PLUS=42, 
		MINUS=43, MOD=44, NEWLINE=45, CLASS_NAME=46, NAME=47, LP=48, RP=49, LBRACK=50, 
		RBRACK=51, LKBRACE=52, RKBRACE=53, SKIP_=54, SPACES_INLINE=55, DOT=56, 
		TRIPLE_DOUBLE_START=57, TRIPLE_SINGLE_START=58, TRIPLE_DOUBLE_END=59, 
		TRIPLE_SINGLE_END=60, JINJA_EXPR_START=61, JINJA_STMT_START=62, JINJA_COMMENT_START=63, 
		HTML_COMMENT=64, HTML_CONDITIONAL_COMMENT=65, XML_DECLARATION=66, CDATA=67, 
		DTD=68, SCRIPTLET=69, SEA_WS=70, STYLE_OPEN=71, TAG_OPEN=72, HTML_TEXT=73, 
		TAG_CLOSE=74, TAG_SLASH_CLOSE=75, TAG_SLASH=76, TAG_EQUALS=77, TAG_NAME=78, 
		TAG_WHITESPACE=79, ATTVALUE_VALUE=80, STYLE_CLOSE=81, CSS_LBRACE=82, CSS_RBRACE=83, 
		CSS_LPAREN=84, CSS_RPAREN=85, CSS_COLON=86, CSS_SEMI=87, CSS_COMMA=88, 
		CSS_DOT=89, CSS_GT=90, CSS_HASH=91, CSS_HEX_COLOR=92, CSS_NUMBER=93, CSS_UNIT=94, 
		CSS_STRING=95, CSS_ID=96, CSS_Space=97, CSS_Comment=98, CSS_TILDE=99, 
		CSS_UNIVERSAL=100, CSS_IMPORTANT=101, JINJA_EXPR_END=102, JINJA_STMT_END=103, 
		J_EXTENDS=104, J_BLOCK=105, J_ENDBLOCK=106, J_FOR=107, J_ENDFOR=108, J_IF=109, 
		J_ELIF=110, J_ELSE=111, J_ENDIF=112, J_IN=113, J_LENGTH=114, J_OR=115, 
		J_AND=116, J_NOT=117, J_IS=118, J_FILTER=119, J_TRUE=120, J_FALSE=121, 
		J_NONE=122, J_LPAREN=123, J_RPAREN=124, J_LBRACK=125, J_RBRACK=126, J_COMMA=127, 
		J_DOT=128, J_COLON=129, J_PIPE=130, J_EQ=131, J_NEQ=132, J_GT=133, J_LT=134, 
		J_ASSIGN=135, J_NUMBER=136, J_STRING=137, J_NAME=138, J_WS=139;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_compound_stmt = 2, RULE_class_def = 3, 
		RULE_return_stmt = 4, RULE_global_stmt = 5, RULE_import_from = 6, RULE_imptd = 7, 
		RULE_if_stmt = 8, RULE_condition = 9, RULE_python_expr = 10, RULE_atom_expr = 11, 
		RULE_complex_expr = 12, RULE_comp_op = 13, RULE_assign_stmt = 14, RULE_template_literal = 15, 
		RULE_for_loop = 16, RULE_func_def = 17, RULE_dec = 18, RULE_parameters = 19, 
		RULE_fun_params = 20, RULE_atom = 21, RULE_bool_exp = 22, RULE_list_items = 23, 
		RULE_dict_maker = 24, RULE_key_value = 25, RULE_simple_expr = 26, RULE_arithmetic_expr = 27, 
		RULE_arglist = 28, RULE_argument = 29, RULE_html_content = 30, RULE_html_content_item = 31, 
		RULE_htmlElement = 32, RULE_tag_content = 33, RULE_style_sheet = 34, RULE_ruleSet = 35, 
		RULE_selector_decl = 36, RULE_css_selector_list = 37, RULE_css_selector = 38, 
		RULE_declarationList = 39, RULE_declaration = 40, RULE_css_function_args = 41, 
		RULE_css_function_call = 42, RULE_cssterm = 43, RULE_jinjaStatementBlock = 44, 
		RULE_jinjaExpressionBlock = 45, RULE_jStatement = 46, RULE_j_extends_stmt = 47, 
		RULE_j_block_stmt = 48, RULE_j_for_stmt = 49, RULE_j_if_stmt = 50, RULE_j_expression = 51, 
		RULE_j_call_expr = 52, RULE_j_slice = 53, RULE_j_var_access = 54, RULE_j_argument_list = 55, 
		RULE_j_argument = 56, RULE_j_atom = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "compound_stmt", "class_def", "return_stmt", "global_stmt", 
			"import_from", "imptd", "if_stmt", "condition", "python_expr", "atom_expr", 
			"complex_expr", "comp_op", "assign_stmt", "template_literal", "for_loop", 
			"func_def", "dec", "parameters", "fun_params", "atom", "bool_exp", "list_items", 
			"dict_maker", "key_value", "simple_expr", "arithmetic_expr", "arglist", 
			"argument", "html_content", "html_content_item", "htmlElement", "tag_content", 
			"style_sheet", "ruleSet", "selector_decl", "css_selector_list", "css_selector", 
			"declarationList", "declaration", "css_function_args", "css_function_call", 
			"cssterm", "jinjaStatementBlock", "jinjaExpressionBlock", "jStatement", 
			"j_extends_stmt", "j_block_stmt", "j_for_stmt", "j_if_stmt", "j_expression", 
			"j_call_expr", "j_slice", "j_var_access", "j_argument_list", "j_argument", 
			"j_atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'pass'", "'def'", "'return'", "'from'", 
			"'import'", "'as'", null, null, null, null, null, "'global'", "'class'", 
			null, null, null, "'True'", "'False'", "'None'", null, "'while'", "'->'", 
			"'@'", null, null, "'>='", "'<='", "'//'", "'**'", null, null, null, 
			null, null, null, null, null, "'+'", "'-'", "'%'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'{{'", "'{%'", "'{#'", null, null, null, null, null, null, null, 
			null, null, null, null, "'/>'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'#'", null, null, null, 
			null, null, null, null, "'~'", null, "'!important'", "'}}'", "'%}'", 
			"'extends'", "'block'", "'endblock'", null, "'endfor'", null, null, null, 
			"'endif'", null, "'length'", null, null, null, null, "'filter'", "'true'", 
			"'false'", "'none'", null, null, null, null, null, null, null, "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "STRING", "NUMBER", "PASS", "DEF", "RETURN", 
			"FROM", "IMPORT", "AS", "IF", "ELIF", "ELSE", "FOR", "IN", "GLOBAL", 
			"CLASS", "AND", "OR", "NOT", "TRUE", "FALSE", "NONE", "IS", "WHILE", 
			"ARROW", "AT", "EQ", "NEQ", "GTE", "LTE", "SLASHSLASH", "POW", "ASSIGN", 
			"GT", "LT", "SLASH", "STAR", "COLON", "SEMI", "COMMA", "PLUS", "MINUS", 
			"MOD", "NEWLINE", "CLASS_NAME", "NAME", "LP", "RP", "LBRACK", "RBRACK", 
			"LKBRACE", "RKBRACE", "SKIP_", "SPACES_INLINE", "DOT", "TRIPLE_DOUBLE_START", 
			"TRIPLE_SINGLE_START", "TRIPLE_DOUBLE_END", "TRIPLE_SINGLE_END", "JINJA_EXPR_START", 
			"JINJA_STMT_START", "JINJA_COMMENT_START", "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", 
			"XML_DECLARATION", "CDATA", "DTD", "SCRIPTLET", "SEA_WS", "STYLE_OPEN", 
			"TAG_OPEN", "HTML_TEXT", "TAG_CLOSE", "TAG_SLASH_CLOSE", "TAG_SLASH", 
			"TAG_EQUALS", "TAG_NAME", "TAG_WHITESPACE", "ATTVALUE_VALUE", "STYLE_CLOSE", 
			"CSS_LBRACE", "CSS_RBRACE", "CSS_LPAREN", "CSS_RPAREN", "CSS_COLON", 
			"CSS_SEMI", "CSS_COMMA", "CSS_DOT", "CSS_GT", "CSS_HASH", "CSS_HEX_COLOR", 
			"CSS_NUMBER", "CSS_UNIT", "CSS_STRING", "CSS_ID", "CSS_Space", "CSS_Comment", 
			"CSS_TILDE", "CSS_UNIVERSAL", "CSS_IMPORTANT", "JINJA_EXPR_END", "JINJA_STMT_END", 
			"J_EXTENDS", "J_BLOCK", "J_ENDBLOCK", "J_FOR", "J_ENDFOR", "J_IF", "J_ELIF", 
			"J_ELSE", "J_ENDIF", "J_IN", "J_LENGTH", "J_OR", "J_AND", "J_NOT", "J_IS", 
			"J_FILTER", "J_TRUE", "J_FALSE", "J_NONE", "J_LPAREN", "J_RPAREN", "J_LBRACK", 
			"J_RBRACK", "J_COMMA", "J_DOT", "J_COLON", "J_PIPE", "J_EQ", "J_NEQ", 
			"J_GT", "J_LT", "J_ASSIGN", "J_NUMBER", "J_STRING", "J_NAME", "J_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JinjaFlaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JinjaFlaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ProgContext {
		public TerminalNode EOF() { return getToken(JinjaFlaskParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(JinjaFlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(JinjaFlaskParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaFlaskParserVisitor ) return ((JinjaFlaskParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(116);
					match(NEWLINE);
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6157265265707512L) != 0)) {
				{
				{
				setState(122);
				statement();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundStatementContext extends StatementContext {
		public TerminalNode NEWLINE() { return getToken(JinjaFlaskParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(JinjaFlaskParser.INDENT, 0); }
		public List<Compound_stmtContext> compound_stmt() {
			return getRuleContexts(Compound_stmtContext.class);
		}
		public Compound_stmtContext compound_stmt(int i) {
			return getRuleContext(Compound_stmtContext.class,i);
		}
		public TerminalNode DEDENT() { return getToken(JinjaFlaskParser.DEDENT, 0); }
		public CompoundStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaFlaskParserVisitor ) return ((JinjaFlaskParserVisitor<? extends T>)visitor).visitCompoundStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PassStatementContext extends StatementContext {
		public TerminalNode PASS() { return getToken(JinjaFlaskParser.PASS, 0); }
		public TerminalNode NEWLINE() { return getToken(JinjaFlaskParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(JinjaFlaskParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(JinjaFlaskParser.DEDENT, 0); }
		public PassStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaFlaskParserVisitor ) return ((JinjaFlaskParserVisitor<? extends T>)visitor).visitPassStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			int _alt;
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new CompoundStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(130);
					match(NEWLINE);
					setState(131);
					match(INDENT);
					}
				}

				setState(135); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(134);
						compound_stmt();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(137); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(140);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(139);
					match(DEDENT);
					}
					break;
				}
				}
				break;
			case 2:
				_localctx = new PassStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(142);
					match(NEWLINE);
					setState(143);
					match(INDENT);
					}
				}

				setState(146);
				match(PASS);
				setState(148);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(147);
					match(DEDENT);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Compound_stmtContext extends ParserRuleContext {
		public Compound_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_stmt; }
	 
		public Compound_stmtContext() { }
		public void copyFrom(Compound_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends Compound_stmtContext {
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JinjaFlaskParser.NEWLINE, 0); }
		public IfStatementContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaFlaskParserVisitor ) return ((JinjaFlaskParserVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentStatementContext extends Compound_stmtContext {
		public Assign_stmtContext assign_stmt() {
			return getRuleContext(Assign_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JinjaFlaskParser.NEWLINE, 0); }
		public AssignmentStatementContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaFlaskParserVisitor ) return ((JinjaFlaskParserVisitor<? extends T>)visitor).visitAssignmentStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalStatementContext extends Compound_stmtContext {
		public Global_stmtContext global_stmt() {
			return getRuleContext(Global_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JinjaFlaskParser.NEWLINE, 0); }
		public GlobalStatementContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaFlaskParserVisitor ) return ((JinjaFlaskParserVisitor<? extends T>)visitor).visitGlobalStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForLoopStatementContext extends Compound_stmtContext {
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JinjaFlaskParser.NEWLINE, 0); }
		public ForLoopStatementContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaFlaskParserVisitor ) return ((JinjaFlaskParserVisitor<? extends T>)visitor).visitForLoopStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStatementContext extends Compound_stmtContext {
		public Return_stmtContext return_stmt() {
			return getRuleContext(Return_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JinjaFlaskParser.NEWLINE, 0); }
		public ReturnStatementContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaFlaskParserVisitor ) return ((JinjaFlaskParserVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PythonExpressionContext extends Compound_stmtContext {
		public Python_exprContext python_expr() {
			return getRuleContext(Python_exprContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JinjaFlaskParser.NEWLINE, 0); }
